# repoman

./: .gitignore  .gitreview  .isort.cfg  Dockerfile.s2i-repo  Dockerfile.tox-env-centos7  README.rst  build-requirements.txt  check_merge.req  docs-requirements.txt  requirements.txt  setup.cfg  setup.py  stdci.yaml  test-requirements.txt  tox.ini
automation/: build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.packages.el8  build-artifacts.packages.fc28  build-artifacts.req  build-artifacts.sh  check-merged.packages  check-merged.packages.el6  check-merged.packages.el7  check-merged.packages.fc27  check-merged.repos.el6  check-merged.req  check-merged.sh  check-patch.packages  check-patch.packages.el6  check-patch.packages.el7  check-patch.packages.el8  check-patch.packages.fc27  check-patch.packages.fc28  check-patch.packages.fc29  check-patch.repos.el6  check-patch.repos.el7  check-patch.req  check-patch.sh  python.sh
docs/: Tutorial.rst  conf.py  index.rst
repoman/: cmd.py
repoman/common/: artifact.py  config.py  parser.py  repo.py  utils.py
repoman/common/filters/: __init__.py  latest.py  name.py  only_missing.py
repoman/common/sources/: __init__.py  copr.py  dir.py  jenkins.py  kojibuild.py  kojiurl.py  url.py
repoman/common/stores/: __init__.py  (+1 more)
scripts/: version_manager.py
tests/: pull_sys_libs.sh
tests/functional/: basic.bats  common_vars.bash  dir.bats  helpers.bash  iso.bats  latest.bats  only-missing.bats  pull_rpm_lib.sh  rpm.bats  utils.bash  zz-closing.bats
tests/unit/: test_JenkinsSource.py  test_KojiURLSource.py
(+25 files in other folders)
