[metadata]
name = repoman
author = oVirt Infrastructure/CI team
author_email = infra@ovirt.org
summary = Manage artifact repositories
description-file = README.rst
license = GPLv3
home-page = https://gerrit.ovirt.org/#/admin/projects/repoman
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: GPLv3
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    repoman

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    repoman=repoman.cmd:main
